cloud-formation/common/vpc.yml
AWSTemplateFormatVersion: "2010-09-09"

Parameters:
  # VPCのCIDRレンジ
  VpcCidr:
    Type: String
    Default: "10.99.0.0/16"

  # パブリックサブネットのCIDRレンジ
  PublicCidrBlocks:
    Type: CommaDelimitedList
    Default: "10.99.10.0/24, 10.99.11.0/24, 10.99.12.0/24"

  # プライベートサブネットのCIDRレンジ
  PrivateCidrBlocks:
    Type: CommaDelimitedList
    Default: "10.99.20.0/24, 10.99.21.0/24, 10.99.22.0/24"

  # テストリスナーポート
  TestListenerPort:
    Type: Number
    Default: 4430

Resources:
  Vpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCidr
      EnableDnsSupport: true
      EnableDnsHostnames: true

  # インターネットゲートウェイ
  InternetGateway:
    Type: AWS::EC2::InternetGateway

  # インターネットゲートウェイをVPCにアタッチする
  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref Vpc

  #======================
  # サブネット
  #======================

  ### パブリックサブネット ###
  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      AvailabilityZone: !Select [ 0, !GetAZs ]
      CidrBlock: !Select [ 0, !Ref PublicCidrBlocks ]
      MapPublicIpOnLaunch: true

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      AvailabilityZone: !Select [ 1, !GetAZs ]
      CidrBlock: !Select [ 1, !Ref PublicCidrBlocks ]
      MapPublicIpOnLaunch: true

  PublicSubnet3:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      AvailabilityZone: !Select [ 2, !GetAZs ]
      CidrBlock: !Select [ 2, !Ref PublicCidrBlocks ]
      MapPublicIpOnLaunch: true

  ### プライベートサブネット ###
  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      AvailabilityZone: !Select [ 0, !GetAZs ]
      CidrBlock: !Select [ 0, !Ref PrivateCidrBlocks ]
      MapPublicIpOnLaunch: false

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      AvailabilityZone: !Select [ 1, !GetAZs ]
      CidrBlock: !Select [ 1, !Ref PrivateCidrBlocks ]
      MapPublicIpOnLaunch: false

  PrivateSubnet3:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      AvailabilityZone: !Select [ 2, !GetAZs ]
      CidrBlock: !Select [ 2, !Ref PrivateCidrBlocks ]
      MapPublicIpOnLaunch: false

  #======================
  # ルートテーブル
  #======================
  # パブリックサブネット用共通ルートテーブル
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc

  PublicInternetRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet2

  PublicSubnet3RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet3
  
  # プライベートサブネット用共通ルートテーブル
  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc

  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref PrivateSubnet1

  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref PrivateSubnet2

  PrivateSubnet3RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref PrivateSubnet3

  #======================
  # セキュリティグループ
  #======================

  # インターネット公開のALB用セキュリティグループ
  LoadBalancerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Security group for ALB"
      GroupName: !Sub "${AWS::StackName}-alb-sg"
      VpcId: !Ref Vpc

  LoadBalancerSecurityGroupHttpIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: "Allow HTTP traffic"
      GroupId: !Ref LoadBalancerSecurityGroup
      IpProtocol: "tcp"
      FromPort: 80
      ToPort: 80
      CidrIp: "0.0.0.0/0"

  LoadBalancerSecurityGroupHttpsIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: "Allow HTTPS traffic"
      GroupId: !Ref LoadBalancerSecurityGroup
      IpProtocol: "tcp"
      FromPort: 443
      ToPort: 443
      CidrIp: "0.0.0.0/0"

  LoadBalancerSecurityGroupHttpsForTestIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: "Allow HTTPS traffic"
      GroupId: !Ref LoadBalancerSecurityGroup
      IpProtocol: "tcp"
      FromPort: !Ref TestListenerPort
      ToPort: !Ref TestListenerPort
      CidrIp: "0.0.0.0/0"

  LoadBalancerSecurityGroupEgressAll:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      Description: "Allow all outbound traffic"
      GroupId: !Ref LoadBalancerSecurityGroup
      IpProtocol: -1
      CidrIp: "0.0.0.0/0"

  # コンテナアプリ用セキュリティグループ
  WebAppSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Allow Access From LoadBalancer to WebApp Service"
      GroupName: !Sub "${AWS::StackName}-webapp-sg"
      VpcId: !Ref Vpc

  # Internet ALB -> WebApp Container
  WebAppSecurityGroupIngressFromLoadBalancer:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: "Allow HTTP traffic from LoadBalancer to WebApp"
      GroupId: !Ref WebAppSecurityGroup
      IpProtocol: "tcp"
      FromPort: 80
      ToPort: 80
      SourceSecurityGroupId: !Ref LoadBalancerSecurityGroup

  WebAppSecurityGroupEgressAllTraffic:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      Description: "Allow all outbound traffic by default"
      GroupId: !Ref WebAppSecurityGroup
      IpProtocol: -1
      CidrIp: "0.0.0.0/0"

Outputs:
  ### VPC ###
  VpcId:
    Value: !Ref Vpc
    Export:
      Name: !Sub "${AWS::StackName}-VpcId"

  VpcCidrBlock:
    Value: !GetAtt Vpc.CidrBlock
    Export:
      Name: !Sub "${AWS::StackName}-VpcCidrBlock"

  ### パブリックサブネット ###
  PublicSubnet1:
    Value: !Ref PublicSubnet1
    Export:
      Name: !Sub "${AWS::StackName}-PublicSubnet1"

  PublicSubnet2:
    Value: !Ref PublicSubnet2
    Export:
      Name: !Sub "${AWS::StackName}-PublicSubnet2"

  PublicSubnet3:
    Value: !Ref PublicSubnet3
    Export:
      Name: !Sub "${AWS::StackName}-PublicSubnet3"

  ### プライベートサブネット ###
  PrivateSubnet1:
    Value: !Ref PrivateSubnet1
    Export:
      Name: !Sub "${AWS::StackName}-PrivateSubnet1"

  PrivateSubnet1CidrBlock:
    Value: !Select [ 0, !Ref PrivateCidrBlocks ]
    Export:
      Name: !Sub "${AWS::StackName}-PrivateSubnet1CidrBlock"

  PrivateSubnet2:
    Value: !Ref PrivateSubnet2
    Export:
      Name: !Sub "${AWS::StackName}-PrivateSubnet2"

  PrivateSubnet2CidrBlock:
    Value: !Select [ 1, !Ref PrivateCidrBlocks ]
    Export:
      Name: !Sub "${AWS::StackName}-PrivateSubnet2CidrBlock"

  PrivateSubnet3:
    Value: !Ref PrivateSubnet3
    Export:
      Name: !Sub "${AWS::StackName}-PrivateSubnet3"
  
  ### ルートテーブル ###
  PrivateRouteTableId:
    Value: !Ref PrivateRouteTable
    Export:
      Name: !Sub "${AWS::StackName}-PrivateRouteTableId"

  ### セキュリティグループ ###
  LoadBalancerSecurityGroup:
    Description: Common Security Group for ALB
    Value: !Ref LoadBalancerSecurityGroup
    Export:
      Name: !Sub "${AWS::StackName}-LoadBalancerSecurityGroup"

  TestListenerPort:
    Description: Test LoadBalancer Listener Port
    Value: !Ref TestListenerPort
    Export:
      Name: !Sub "${AWS::StackName}-TestListenerPort"

  WebAppSecurityGroup:
    Description: Common Security Group for WebApp Container
    Value: !Ref WebAppSecurityGroup
    Export:
      Name: !Sub "${AWS::StackName}-WebAppSecurityGroup"
